# API/gin_api/docs/swagger.json
@@ -38,66 +38,6 @@
                     }
                 }
             }
-        },
-        "/v1/kiosk/checksn/{sn}": {
-            "get": {
-                "description": "Wearable SN를 받아 사용하는 유저가 존재하는지 확인하는 기능",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "check Wearable SN",
-                "operationId": "userCheck",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Wearable Serial Number",
-                        "name": "sn",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/kiosk.UserCheckModel"
-                        }
-                    }
-                }
-            }
-        },
-        "/v1/kiosk/welcome/{name}": {
-            "get": {
-                "description": "테스트용 작성후 삭제예정",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "kiosk working test",
-                "operationId": "hello",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "User name",
-                        "name": "name",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/kiosk.welcomeModel"
-                        }
-                    }
-                }
-            }
         }
     },
     "definitions": {
@@ -123,33 +63,6 @@
                 "temp": {
                     "type": "string",
                     "example": "36.5"
-                }
-            }
-        },
-        "kiosk.UserCheckModel": {
-            "type": "object",
-            "properties": {
-                "isuser": {
-                    "type": "boolean",
-                    "example": true
-                },
-                "wearableSN": {
-                    "type": "string",
-                    "example": "wsn1111"
-                }
-            }
-        },
-        "kiosk.welcomeModel": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "integer",
-                    "format": "int64",
-                    "example": 1
-                },
-                "name": {
-                    "type": "string",
-                    "example": "account  name"
                 }
             }
         }
